--- a/Revels'15/CellOptionView.xib
+++ b/Revels'15/CellOptionView.xib
@@ -1,22 +1,21 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6254" systemVersion="14C109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6245" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
-        <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
+        <deployment defaultVersion="1808" identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6238"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="IG8-OH-BQd" customClass="CellOptionView">
-            <rect key="frame" x="0.0" y="0.0" width="310" height="384"/>
+            <rect key="frame" x="0.0" y="0.0" width="300" height="384"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="KvY-uW-dkM">
-                    <rect key="frame" x="0.0" y="0.0" width="310" height="62"/>
+                    <rect key="frame" x="0.0" y="0.0" width="300" height="62"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="1xW-Q3-XsS">
-                            <rect key="frame" x="0.0" y="0.0" width="310" height="62"/>
+                            <rect key="frame" x="124" y="18" width="51.5" height="26"/>
                             <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="22"/>
                             <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             <nil key="highlightedColor"/>
@@ -24,17 +23,19 @@
                     </subviews>
                     <color key="backgroundColor" red="0.1450980392" green="0.63921568630000003" blue="0.59999999999999998" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
-                        <constraint firstAttribute="trailing" secondItem="1xW-Q3-XsS" secondAttribute="trailing" id="5FL-0J-tw6"/>
-                        <constraint firstItem="1xW-Q3-XsS" firstAttribute="top" secondItem="KvY-uW-dkM" secondAttribute="top" id="HpA-fH-R23"/>
-                        <constraint firstAttribute="bottom" secondItem="1xW-Q3-XsS" secondAttribute="bottom" id="kgL-1c-8a5"/>
-                        <constraint firstItem="1xW-Q3-XsS" firstAttribute="leading" secondItem="KvY-uW-dkM" secondAttribute="leading" id="vuC-ic-A6o"/>
+                        <constraint firstItem="1xW-Q3-XsS" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="KvY-uW-dkM" secondAttribute="leading" id="I8D-RB-cVk"/>
+                        <constraint firstAttribute="height" constant="62" id="IIL-SE-3fR"/>
+                        <constraint firstAttribute="centerX" secondItem="1xW-Q3-XsS" secondAttribute="centerX" id="SMk-kD-xKQ"/>
+                        <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="1xW-Q3-XsS" secondAttribute="trailing" id="dXx-rm-vFz"/>
+                        <constraint firstAttribute="centerY" secondItem="1xW-Q3-XsS" secondAttribute="centerY" id="eBd-Iz-xNV"/>
                     </constraints>
                 </view>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="krZ-F2-PED">
-                    <rect key="frame" x="37" y="336" width="237" height="40"/>
+                    <rect key="frame" x="31.5" y="336" width="237" height="40"/>
                     <color key="backgroundColor" red="0.1450980392" green="0.63921568630000003" blue="0.59999999999999998" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="40" id="f2b-Ae-3AP"/>
+                        <constraint firstAttribute="height" constant="40" id="B5H-J6-wnX"/>
+                        <constraint firstAttribute="width" constant="237" id="o0a-pj-RwA"/>
                     </constraints>
                     <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="18"/>
                     <state key="normal" title="ADD TO FOLLOWING">
@@ -42,34 +43,31 @@
                         <color key="titleShadowColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
                 </button>
-                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" text="YOLOSWAG" textAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="9Hg-Lc-7yX">
-                    <rect key="frame" x="0.0" y="61" width="310" height="261"/>
+                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="XA6-0U-i0f">
+                    <rect key="frame" x="0.0" y="62" width="300" height="266"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    <color key="textColor" red="0.1450980392" green="0.63921568630000003" blue="0.59999999999999998" alpha="1" colorSpace="calibratedRGB"/>
+                    <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
                     <fontDescription key="fontDescription" name="Helvetica-Light" family="Helvetica" pointSize="22"/>
                     <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
-                    <dataDetectorType key="dataDetectorTypes" phoneNumber="YES" link="YES" address="YES"/>
                 </textView>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
             <constraints>
-                <constraint firstItem="9Hg-Lc-7yX" firstAttribute="centerX" secondItem="krZ-F2-PED" secondAttribute="centerX" id="6Dj-tf-nTL"/>
-                <constraint firstAttribute="trailing" secondItem="KvY-uW-dkM" secondAttribute="trailing" id="9AM-WY-t8U"/>
-                <constraint firstAttribute="bottom" secondItem="KvY-uW-dkM" secondAttribute="bottom" constant="322" id="BVJ-L3-XzG"/>
-                <constraint firstItem="9Hg-Lc-7yX" firstAttribute="top" secondItem="IG8-OH-BQd" secondAttribute="top" constant="61" id="Vi7-cq-I3p"/>
-                <constraint firstItem="krZ-F2-PED" firstAttribute="top" secondItem="9Hg-Lc-7yX" secondAttribute="bottom" constant="14" id="ZhH-tb-xf9"/>
-                <constraint firstItem="krZ-F2-PED" firstAttribute="bottom" secondItem="IG8-OH-BQd" secondAttribute="bottomMargin" id="bXU-c7-tEs"/>
-                <constraint firstItem="KvY-uW-dkM" firstAttribute="top" secondItem="IG8-OH-BQd" secondAttribute="top" id="e3v-uH-2Di"/>
-                <constraint firstItem="KvY-uW-dkM" firstAttribute="leading" secondItem="9Hg-Lc-7yX" secondAttribute="leading" id="h51-l7-zSx"/>
-                <constraint firstItem="krZ-F2-PED" firstAttribute="leading" secondItem="IG8-OH-BQd" secondAttribute="leading" constant="37" id="mFq-I7-N6m"/>
-                <constraint firstItem="KvY-uW-dkM" firstAttribute="leading" secondItem="IG8-OH-BQd" secondAttribute="leading" id="uKl-vg-AVL"/>
-                <constraint firstItem="9Hg-Lc-7yX" firstAttribute="trailing" secondItem="KvY-uW-dkM" secondAttribute="trailing" id="uSK-fy-z71"/>
+                <constraint firstAttribute="centerX" secondItem="krZ-F2-PED" secondAttribute="centerX" id="2Dp-Hu-DZr"/>
+                <constraint firstAttribute="bottom" secondItem="krZ-F2-PED" secondAttribute="bottom" constant="8" id="2zA-mj-XWj"/>
+                <constraint firstAttribute="trailing" secondItem="KvY-uW-dkM" secondAttribute="trailing" id="Bby-a2-1Xj"/>
+                <constraint firstItem="krZ-F2-PED" firstAttribute="top" secondItem="XA6-0U-i0f" secondAttribute="bottom" constant="8" id="Dl8-tS-eQo"/>
+                <constraint firstAttribute="trailing" secondItem="XA6-0U-i0f" secondAttribute="trailing" id="Ki7-GD-YOu"/>
+                <constraint firstItem="XA6-0U-i0f" firstAttribute="leading" secondItem="IG8-OH-BQd" secondAttribute="leading" id="LAf-Kq-kmW"/>
+                <constraint firstItem="KvY-uW-dkM" firstAttribute="leading" secondItem="IG8-OH-BQd" secondAttribute="leading" id="b9v-pv-nFN"/>
+                <constraint firstItem="KvY-uW-dkM" firstAttribute="top" secondItem="IG8-OH-BQd" secondAttribute="top" id="eq6-B3-TjJ"/>
+                <constraint firstItem="XA6-0U-i0f" firstAttribute="top" secondItem="KvY-uW-dkM" secondAttribute="bottom" id="qlP-AW-ess"/>
             </constraints>
             <nil key="simulatedStatusBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
                 <outlet property="addToFollowingButton" destination="krZ-F2-PED" id="OPA-a0-Ja1"/>
-                <outlet property="eventDescription" destination="9Hg-Lc-7yX" id="b0j-ly-HiA"/>
+                <outlet property="eventDescription" destination="XA6-0U-i0f" id="v5R-xx-ALr"/>
                 <outlet property="eventLabel" destination="1xW-Q3-XsS" id="KLz-sn-jrY"/>
                 <outlet property="greenView" destination="KvY-uW-dkM" id="cKY-gj-eiA"/>
             </connections>
